Update and sync with wiki.