@@ -8,7 +8,13 @@ A command line tool that parses Java garbage collection logging and does analysi
   * Sun/Oracle JDK 1.5 and higher
   * Best utilized with the following GC logging options:
 
+JDK5 - JDK8:
+
 >-XX:+PrintGC -Xloggc:gc.log -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCApplicationStoppedTime
+
+JDK9+:
+
+>-Xlog:gc*:file=gc.log
 
 ## Installation ##
 
@@ -80,7 +86,7 @@ mvn -U -fn clean install
 ## Usage ##
 
 ```
-java -jar garbagecat-2.0.11-SNAPSHOT.jar --help
+java -jar garbagecat-3.0.1-SNAPSHOT.jar --help
 usage: garbagecat [OPTION]... [FILE]
  -h,--help                  help
  -j,--jvmoptions <arg>      JVM options used during JVM run
@@ -98,7 +104,7 @@ usage: garbagecat [OPTION]... [FILE]
 Notes:
   1. JVM options are can be passed in if they are not present in the gc logging header. Specifying the JVM options used during the JVM run allows for more detailed analysis.
   1. By default a report called report.txt is created in the directory where the **garbagecat** tool is run. Specifying a custom name for the output file is useful when analyzing multiple gc logs.
-  1. Version information is included in the report by using the version and.or latest version options.     
+  1. Version information is included in the report by using the version and.or latest version options.
   1. Preprocessing is sometimes required (e.g. when non-standard JVM options are used). It removes extraneous logging and makes any format adjustments needed for parsing (e.g. combining logging that the JVM sometimes splits across multiple lines). 
   1. When preprocessing is enabled, a preprocessed file will be created in the same location as the input file with a ".pp" file extension added. 
   1. Reordering is for gc logging that has gotten out of time/date order. Very rare, but some logging management systems/processes are susceptible to this happening (e.g. logging stored in a central repository).
@@ -110,8 +116,8 @@ Notes:
 
 ```
 ========================================
-Running garbagecat version: 2.0.8
-Latest garbagecat version/tag: v2.0.10
+Running garbagecat version: 3.0.2-SNAPSHOT
+Latest garbagecat version/tag: v3.0.1
 ========================================
 Throughput less than 90%
 ----------------------------------------
@@ -275,5 +281,4 @@ info
 ----------------------------------------
 *When UseCompressedOops and UseCompressedClassesPointers (JDK 1.8 u40+) are enabled (default) the Metaspace reported in the GC logging is the sum of two native memory spaces: (1) class metadata. (2) compressed class pointers. It is recommended to explicitly set the compressed class pointers space. For example: -XX:CompressedClassSpaceSize=1G.
 *GC log file rotation is not enabled. Consider enabling rotation (-XX:+UseGCLogFileRotation -XX:GCLogFileSize=N -XX:NumberOfGCLogFiles=N) to protect disk space.
-========================================
-```
+========================================```
